# Escultor-Abstrato

./: CMakeLists.txt  README.md  cutbox.cpp  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.cpp  figurageometrica.h  main.cpp  putbox.cpp  putbox.h  putellipsoid.cpp  putellipsoid.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  reta.cpp  sculptor.cpp  sculptor.h
